--- a/locales/stock_transfer.en.yml
+++ b/locales/stock_transfer.en.yml
@@ -4,6 +4,7 @@ en:
     enable_actions: true
     child: "stock_transfer_line_item"
     disable_update: true
+    disable_destroy: true
     resource_article: "a"
     resource_klass: "StockTransfer"
     resource_name: "stock_transfer"
