--- a/locales/stock_adjustment_line_item.en.yml
+++ b/locales/stock_adjustment_line_item.en.yml
@@ -2,6 +2,7 @@
 en:
   stock_adjustment_line_item:
     disable_update: true
+    disable_destroy: true
     parent: "stock_adjustment"
     parent_article: "a"
     parent_klass: "StockAdjustment"
