--- a/locales/payment_term.yml
+++ b/locales/payment_term.yml
@@ -5,6 +5,7 @@ en:
     resource_klass: "PaymentTerm"
     resource_name: "payment_term"
     resource_plural: "payment_terms"
+    used_in_sales_order: true
     json: [
       {
         id: 3,
