[FEATURE] Update price desciption for SALI

--- a/locales/stock_adjustment_line_item.en.yml
+++ b/locales/stock_adjustment_line_item.en.yml
@@ -115,7 +115,7 @@ en:
       price: {
         name: "price",
         type: "String",
-        description: "",
+        description: "Required only when quantity is greater than 0. For negative quantities, the current Moving Average Cost will be assigned automatically.",
         updatable: true,
         creatable: true,
         required: true,
