Add hs_code and country of origin

--- a/locales/variant.en.yml
+++ b/locales/variant.en.yml
@@ -20,6 +20,8 @@ en:
         buy_price: "4.5",
         committed_stock: "3",
         incoming_stock: "0",
+        hs_code: "110100",
+        country_of_origin: "SG",
         composite: null,
         description: null,
         keep_selling: false,
@@ -94,6 +96,8 @@ en:
         buy_price: "4.5",
         committed_stock: "0",
         incoming_stock: "0",
+        hs_code: "110100",
+        country_of_origin: "SG",
         composite: null,
         description: null,
         keep_selling: false,
@@ -248,6 +252,20 @@ en:
         description: "",
         updatable: true,
         creatable: true,
+      },
+      hs_code: {
+        name: "hs_code",
+        type: "String",
+        description: "Harmonized System Code",
+        creatable: true,
+        updatable: true,
+      },
+      country_of_origin: {
+        name: "country_of_origin",
+        type: "String",
+        description: "Two letter country code (e.g. SG, US)",
+        creatable: true,
+        updatable: true,
       },
       initial_cost_price: {
         name: "initial_cost_price",
