[TYPO] Remove extra quote

--- a/locales/webhook.en.yml
+++ b/locales/webhook.en.yml
@@ -13,7 +13,7 @@ en:
         ['account', 'account.update'],
         ['addresss', 'address.create, address.update'],
         ['channel', 'channel.destroy'],
-        ['company', 'company.create, company.update', 'company.destroy'],
+        ['company', 'company.create, company.update, company.destroy'],
         ['contact', 'contact.create, contact.update'],
         ['document_theme', 'document_theme.update'],
         ['fulfillment', 'fulfillment.create, fulfillment.fulfilled'],
@@ -22,7 +22,7 @@ en:
         ['location', 'location.create, location.update'],
         ['order', 'order.create, order.finalized, order.fulfilled'],
         ['payment', 'payment.create'],
-        ['product', 'product.create', 'product.destroy'],
+        ['product', 'product.create, product.destroy'],
         ['procurement', 'procurement.create'],
         ['purchase_order', 'purchase_order.create'],
         ['stock_adjustment', 'stock_adjustment.create'],
