JSON inside of YML, use null instead of nil

--- a/locales/order.en.yml
+++ b/locales/order.en.yml
@@ -15,10 +15,10 @@ en:
         "created_at":             "2015-11-12T08:06:01.561Z",
         "updated_at":             "2015-11-12T08:06:01.561Z",
         "document_url":           "https://go.tradegecko.com/d/not-a-real-token-2",
-        "assignee_id":            nil,
+        "assignee_id":            null,
         "billing_address_id":     1,
         "company_id":             1,
-        "contact_id":             nil,
+        "contact_id":             null,
         "currency_id":            1,
         "shipping_address_id":    1,
         "stock_location_id":      1,
@@ -28,19 +28,19 @@ en:
         "fulfillment_status":     "unshipped",
         "invoice_status":         "uninvoiced",
         "issued_at":              "2015-11-12",
-        "notes":                  nil,
+        "notes":                  null,
         "order_number":           "SO0001",
         "packed_status":          "unpacked",
         "payment_status":         "unpaid",
         "phone_number":           "+1 650-468-2904",
-        "reference_number":       nil,
+        "reference_number":       null,
         "return_status":          "unreturned",
         "returning_status":       "unreturning",
-        "ship_at":                nil,
-        "source_url":             nil,
+        "ship_at":                null,
+        "source_url":             null,
         "status":                 "draft",
         "tax_label":              "GST",
-        "tax_override":           nil,
+        "tax_override":           null,
         "tax_treatment":          "inclusive",
         "total":                  0,
         "tags":                   [],
@@ -52,11 +52,11 @@ en:
         "invoices":               [],
         "cached_total":           0,
         "default_price_type_id":  "wholesale",
-        "source":                 nil,
+        "source":                 null,
         "tax_type":               "exclusive",
-        "tracking_number":        nil,
-        "url":                    nil,
-        "source_id":              nil,
+        "tracking_number":        null,
+        "url":                    null,
+        "source_id":              null,
         "invoice_numbers":        {
           1: "INV001"
         },
@@ -67,10 +67,10 @@ en:
         "created_at":             "2015-11-12T08:06:00.561Z",
         "updated_at":             "2015-11-12T08:06:00.561Z",
         "document_url":           "https://go.tradegecko.com/d/not-a-real-token",
-        "assignee_id":            nil,
+        "assignee_id":            null,
         "billing_address_id":     1,
         "company_id":             1,
-        "contact_id":             nil,
+        "contact_id":             null,
         "currency_id":            1,
         "shipping_address_id":    1,
         "stock_location_id":      1,
@@ -80,19 +80,19 @@ en:
         "fulfillment_status":     "unshipped",
         "invoice_status":         "uninvoiced",
         "issued_at":              "2015-11-12",
-        "notes":                  nil,
+        "notes":                  null,
         "order_number":           "SO0001",
         "packed_status":          "unpacked",
         "payment_status":         "unpaid",
         "phone_number":           "+1 650-468-2904",
-        "reference_number":       nil,
+        "reference_number":       null,
         "return_status":          "unreturned",
         "returning_status":       "unreturning",
-        "ship_at":                nil,
-        "source_url":             nil,
+        "ship_at":                null,
+        "source_url":             null,
         "status":                 "draft",
         "tax_label":              "GST",
-        "tax_override":           nil,
+        "tax_override":           null,
         "tax_treatment":          "exclusive",
         "total":                  0,
         "tags":                   [],
@@ -104,11 +104,11 @@ en:
         "invoices":               [],
         "cached_total":           0,
         "default_price_type_id":  "wholesale",
-        "source":                 nil,
+        "source":                 null,
         "tax_type":               "exclusive",
-        "tracking_number":        nil,
-        "url":                    nil,
-        "source_id":              nil,
+        "tracking_number":        null,
+        "url":                    null,
+        "source_id":              null,
         "invoice_numbers":        {
           1: "INV001"
         },
