--- a/locales/order_line_item.en.yml
+++ b/locales/order_line_item.en.yml
@@ -19,13 +19,13 @@ en:
         "tax_type_id":                      1,
         "discount":                         "11.0",
         "freeform":                         false,
-        "image_url":                        nil,
-        "label":                            nil,
-        "line_type":                        nil,
+        "image_url":                        null,
+        "label":                            null,
+        "line_type":                        null,
         "position":                         0,
         "price":                            "189.0",
         "quantity":                         "1.0",
-        "tax_rate_override":                nil,
+        "tax_rate_override":                null,
         "fulfillment_line_item_ids":        [ ],
         "fulfillment_return_line_item_ids": [ ],
         "invoice_line_item_ids":            [ ]
@@ -45,7 +45,7 @@ en:
         "position":                         0,
         "price":                            "189.0",
         "quantity":                         "1.0",
-        "tax_rate_override":                nil,
+        "tax_rate_override":                null,
         "fulfillment_line_item_ids":        [ ],
         "fulfillment_return_line_item_ids": [ ],
         "invoice_line_item_ids":            [ ]
