location label should be unique

--- a/locales/location.en.yml
+++ b/locales/location.en.yml
@@ -113,7 +113,7 @@ en:
       label: {
         name: "label",
         type: "String",
-        description: "",
+        description: "A unique name among 'active' locations",
         updatable: true,
         creatable: true,
         required: true,
