--- a/locales/variant.en.yml
+++ b/locales/variant.en.yml
@@ -25,6 +25,7 @@ en:
         composite: null,
         description: null,
         keep_selling: false,
+        keep_selling_b2b: false,
         last_cost_price: "5.0",
         manage_stock: true,
         max_online: null,
@@ -101,6 +102,7 @@ en:
         composite: null,
         description: null,
         keep_selling: false,
+        keep_selling_b2b: false,
         last_cost_price: "6.0",
         manage_stock: true,
         max_online: null,
@@ -291,7 +293,14 @@ en:
       keep_selling: {
         name: "keep_selling",
         type: "Boolean",
-        description: "Allow item to continue to be sold, even if it is no longer in stock",
+        description: "Allow item to continue to be sold on Integrated sales channels, even if it is no longer in stock",
+        updatable: true,
+        creatable: true,
+      },
+      keep_selling_b2b: {
+        name: "keep_selling_b2b",
+        type: "Boolean",
+        description: "Allow item to continue to be sold on TradeGecko B2B eCommerce Platform, even if it is no longer in stock",
         updatable: true,
         creatable: true,
       },
