--- a/locales/company.en.yml
+++ b/locales/company.en.yml
@@ -278,7 +278,7 @@ en:
       default_price_type_id: {
         name: "default_price_type_id",
         type: "String",
-        description: "",
+        description: "Use default_price_list_id instead",
         filterable: true,
         updatable: true,
         creatable: true,
