Added new webhooks

--- a/locales/webhook.en.yml
+++ b/locales/webhook.en.yml
@@ -17,8 +17,8 @@ en:
         ['contact', 'contact.create, contact.update'],
         ['document_theme', 'document_theme.update'],
         ['fulfillment', 'fulfillment.create, fulfillment.fulfilled'],
-        ['fulfillment_return', 'fulfillment_return.create'],
-        ['invoice', 'invoice.create'],
+        ['fulfillment_return', 'fulfillment_return.create', 'fulfillment_return.received'],
+        ['invoice', 'invoice.create', 'invoice.destroy'],
         ['location', 'location.create, location.update'],
         ['order', 'order.create, order.finalized, order.fulfilled'],
         ['payment', 'payment.create'],
