add default payment method id attribute for account and company

--- a/locales/account.en.yml
+++ b/locales/account.en.yml
@@ -36,6 +36,7 @@ en:
         primary_location_id: 1,
         primary_billing_location_id: 1,
         default_currency_id: 1,
+        default_payment_method_id: 2,
         default_payment_term_id: 3,
         billing_contact_id: 1,
         default_sales_order_tax_type_id: 2,
@@ -236,10 +237,17 @@ en:
         updatable: true,
         creatable: true,
       },
+      default_payment_method_id: {
+        name: "default_payment_method_id",
+        type: "Integer",
+        description: "The default method of payment for creating a new payment.",
+        updatable: true,
+        creatable: true,
+      },
       default_payment_term_id: {
         name: "default_payment_term_id",
         type: "Integer",
-        description: "The default method of payment. This can also be used to push to multiple ledger accounts in your accounting integration.",
+        description: "The default term of payment. This can also be used to push to multiple ledger accounts in your accounting integration.",
         updatable: true,
         creatable: true,
       },
