--- a/locales/company.en.yml
+++ b/locales/company.en.yml
@@ -13,6 +13,7 @@ en:
         updated_at: "2015-11-02T01:44:42.417Z",
         assignee_id: 1,
         default_ledger_account_id: null,
+        default_payment_method_id: null,
         default_payment_term_id: null,
         default_stock_location_id: null,
         default_tax_type_id: null,
@@ -42,6 +43,7 @@ en:
         updated_at: "2015-11-02T01:22:24.612Z",
         assignee_id: null,
         default_ledger_account_id: null,
+        default_payment_method_id: null,
         default_payment_term_id: null,
         default_stock_location_id: null,
         default_tax_type_id: null,
@@ -119,6 +121,14 @@ en:
       },
       default_ledger_account_id: {
         name: "default_ledger_account_id",
+        type: "Integer",
+        description: "",
+        filterable: true,
+        updatable: true,
+        creatable: true,
+      },
+      default_payment_method_id: {
+        name: "default_payment_method_id",
         type: "Integer",
         description: "",
         filterable: true,
