--- a/locales/stock_adjustment_line_item.en.yml
+++ b/locales/stock_adjustment_line_item.en.yml
@@ -11,6 +11,7 @@ en:
     resource_klass: "StockAdjustmentLineItem"
     resource_name: "stock_adjustment_line_item"
     resource_plural: "stock_adjustment_line_items"
+    positioned: true
     json: [
       {
         id: 3,
