[TWEAK] Update address update response to reflect the change that we now return a HTTP code of 200

--- a/locales/address.en.yml
+++ b/locales/address.en.yml
@@ -10,6 +10,7 @@ en:
     resource_name: "address"
     resource_plural: "addresses"
     used_in_sales_order: true
+    update_returns_200: true
     json: [
       {
         id: 6,
