--- a/locales/variant.en.yml
+++ b/locales/variant.en.yml
@@ -19,6 +19,7 @@ en:
         default_ledger_account_id: null,
         buy_price: "4.5",
         committed_stock: "3",
+        available_stock: "7",
         incoming_stock: "0",
         hs_code: "110100",
         country_of_origin: "SG",
@@ -72,7 +73,10 @@ en:
             committed: "3",
             incoming: null,
             bin_location: null,
-            reorder_point: null
+            reorder_point: null,
+            production_committed: "0",
+            production_incoming: "0",
+            available: "7"
           }
         ],
         prices: {
@@ -148,7 +152,10 @@ en:
             committed: null,
             incoming: null,
             bin_location: null,
-            reorder_point: null
+            reorder_point: null,
+            production_committed: "0",
+            production_incoming: "0",
+            available: "10"
           }
         ],
         prices: {
