--- a/locales/stock_adjustment.en.yml
+++ b/locales/stock_adjustment.en.yml
@@ -9,6 +9,20 @@ en:
     resource_plural: "stock_adjustments"
     json: [
       {
+        id: 1,
+        created_at: "2015-11-25T07:27:20.194Z",
+        updated_at: "2015-11-25T07:27:20.740Z",
+        adjustment_number: "SA0001",
+        notes: null,
+        reason: "promotion",
+        stock_location_id: 1,
+        cached_quantity: "1.0",
+        cached_total: "62.5",
+        stock_adjustment_line_item_ids: [
+          1
+        ]
+      },
+      {
         id: 2,
         created_at: "2015-11-25T07:27:39.813Z",
         updated_at: "2015-11-25T07:27:40.176Z",
@@ -21,21 +35,6 @@ en:
         stock_adjustment_line_item_ids: [
           3,
           4
-        ]
-      },
-      {
-        id: 1,
-        created_at: "2015-11-25T07:27:20.194Z",
-        updated_at: "2015-11-25T07:27:20.740Z",
-        adjustment_number: "SA0001",
-        notes: null,
-        reason: "production",
-        stock_location_id: 1,
-        cached_quantity: "25.0",
-        cached_total: "62.5",
-        stock_adjustment_line_item_ids: [
-          1,
-          2
         ]
       }
     ]
@@ -110,6 +109,7 @@ en:
         type: "Integer",
         description: "Defaults to account primary_location.",
         filterable: true,
+        creatable: true,
       },
       cached_quantity: {
         name: "cached_quantity",
